styles/landingPage/lp.module.css
.lp::-webkit-scrollbar {
  display: none;
}

.lpPageSection {
  height: 88vh;
  width:96vw;
  border-radius: 20px;
  margin: 0 30px 20px;
  overflow: hidden;
  min-height: 650px;
  min-width: 270px;
  box-sizing: content-box;
}

.sections {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  margin: 0 auto;
  height: auto;
  padding-bottom: 150px;
}

.blueWhiteGradient {
  background-image: linear-gradient(135deg, #204066, #B7B7B7);
}

.yellowRedGradient {
  background-image: linear-gradient(135deg, #F4FF77, #FFA564);
}

.pinkOrangeGradient {
  background-image: linear-gradient(135deg, #CE55B3, #FFA564);
}

.topPageSectionContainer {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
  overflow: hidden;
  background: url('/images/landingPage/noise.png');
}

.secondPageSectionContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  height: 100%;
  overflow: hidden;
  background-color: white;
  padding-bottom: 30px;
  opacity: 0;
}

.secondPageSectionAnimation {
  animation: largerFadeIn 0.7s ease-in-out;
  opacity: 1;
}

.cardContainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  animation: fadeIn 0.25s ease-in-out;
}

.textContainer {
  display: flex;
  flex-direction: column;
  animation: fadeIn 0.25s ease-in-out;
  padding: 0 30px 0 0;
  margin-left: 30px;
  /* background-color: red; */
}

.badgeHeaderText {
  font-family: 'AsgardFitMedium';
  font-size: 70px;
  color: white;
  z-index: 2;
  text-align: left;
  width: 60%;
}

.badgeNormalText {
  font-family: 'Inter';
  font-size: 35px;
  color: white;
  font-family: 'Inter';
  font-weight: 450;
  z-index: 3;
  padding: 0px;
  text-align: left;
}

.yellowText {
  color: #FFC940;
}

.blackText{
  color: black;
}

.noise {
  position: absolute;
  z-index: 0;
  width: 100%;
  height: 100%;
  left: 0px;
  top: 0px;
}

.walletEqualsResumeText {
  font-family: 'AsgardFitMedium';
  font-size: 50px;
  background: linear-gradient(110.78deg, rgb(118, 230, 80) -1.13%, rgb(249, 214, 73) 15.22%, rgb(240, 142, 53) 32.09%, rgb(236, 81, 87) 48.96%, rgb(255, 24, 189) 67.94%, rgb(26, 75, 255) 85.34%, rgb(98, 216, 249) 99.57%);
	background-size: 300% 300%;
	animation: animatingGradient 9s 1s ease-in-out infinite;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  margin-top: 50px;
  text-align: center;
  padding: 0px 20px;
}

.walletEqualsResumeParagraphText {
  font-family: 'Inter';
  font-size: 18px;
  text-align: center;
  margin-top: 50px;
  padding: 0px 30px;
  max-width: 500px;
}

.signUpToBetaContainer {
  background-color: #F4F4F4;
  width: 600px;
  height: 230px;
  border-radius: 15px;
  margin-top: 80px;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

.signUpToBetaHeader {
  font-family: 'Inter';
  font-weight: 500;
  font-size: 35px;
  margin-top: 20px;
}

.signUpToBetaSubtitleText {
  font-family: 'Inter';
  font-weight: 400;
  font-size: 18px;
  color: gray;
  text-align: center;
  margin: 0px 30px;
  margin-bottom: 20px;
}

.signUpToBetaButton {
  width: 155px;
  height: 50px;
  background-color: black;
  font: 'Inter';
  font-size: 20px;
  font-weight: bold;
  color: white;
  border-radius: 12px;
  box-shadow: 0 5px 10px -5px rgba(0,0,0,0.2);
  margin-bottom: 20px;
  transition-duration: 0.2s;
}

.signUpToBetaButton:hover {
  width: 175px;
  transition-duration: 0.2s;
}


@media only screen and (max-width: 850px) {

  .textContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 50px;
    animation: fadeIn 0.251s ease-in-out;
    padding: 10% 20px;
  }

  .topPageSectionContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100%;
    overflow: hidden;
    background: url('/images/landingPage/noise.png');
  }

  .badgeHeaderText {
    font-size: 30px;
    text-align: center;
    margin-top: -100px;
    padding: 0 10px;
    width: 100%;

  } 

  .badgeNormalText {
    font-size: 20px;
    padding: 0px 10px;
    text-align: center;
  }

  .cardContainer {
    padding-top: 50px;
    animation: fadeIn 0.251s ease-in-out;
  }
  
  .walletEqualsResumeText {
    font-size: 30px;
  }

  .walletEqualsResumeParagraphText {
    font-size: 15px;
    margin-top: 20px;
    max-width: 370px;
  }

  .signUpToBetaContainer {
    width: 310px;
    height: 220px;
    margin-top: 50px;
  }

  .signUpToBetaHeader {
    font-size: 23px;
    margin-top: 10px;
  }

  .signUpToBetaSubtitleText {
    font-size: 13px;
    margin: 0px 10px;
    margin-bottom: 8px;
    padding: 0px 10px;
  }

  .signUpToBetaButton {
    width: 120px;
    height: 40px;
    font-size: 16px;
    border-radius: 10px;
    margin-bottom: 10px;
  }

  .signUpToBetaButton:hover {
    width: 135px;
    transition-duration: 0.2s;
  }


}

@keyframes animatingGradient {
	0% {
		background-position: 0% 50%;
	}
	50% {
		background-position: 100% 50%;
	}
	100% {
		background-position: 0% 50%;
	}
}


@keyframes fadeIn {
  0% {
    opacity: 0;
    transform: translateY(10px);
  }
  100% {
    opacity: 1;
    transform: translateY(0px);
  }
}

@keyframes largerFadeIn {
  0% {
    opacity: 0;
    transform: translateY(20px);
  }
  100% {
    opacity: 1;
    transform: translateY(0px);
  }
}

